fix: rendering on smaller screens

--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -18,13 +18,13 @@
     }
 
     .banner_description {
-        max-width: 40%;
+        max-width: 30%;
         height: 80px;
         line-height: 1.3;
         padding-top: 1rem;
-        font-size: 1.2vw;
+        font-size: 1rem;
         font-weight:200;
-        margin-bottom: 15px;
+        margin-bottom: 45px;
     }
 }
 
@@ -33,6 +33,7 @@
     display: flex;
     justify-content: space-between;
     padding-right: 70px;
+    margin-top: 10px;
 
     .banner_button{
         cursor: pointer;
